# swapi_scraper

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  entrypoint.sh  main.py  pyproject.toml
k8s/: values.yaml
k8s/templates/: deployment.yaml
terraform/: main.tf  output.tf  variables.tf
terraform/modules/cloud_run/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/db/: main.tf  outputs.tf  variables.tf
